<resources>
    <string name="app_name">Timer Widget</string>
    <string-array name="time_type_array">
        <item>Select</item>
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="okay">OKAY</string>
    <string name="set_time">Set Time For Timer</string>
    <string name="widget_time_pref_key">com.timerwidget.default.timer.length.</string>
    <string name="pref_time_key">widget.</string>
    <string name="stop">STOP</string>
    <string name="tap_to_wake">TAP TO WAKE</string>
    <string name="_20_00">20:00</string>
    <string name="spinner_prompt">Select Time Type</string>
    <string name="_00">00</string>
    <string name="hr">Hr</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="confirm">CONFIRM</string>
    <string name="timer_length">Timer Length</string>
    <string name="main_activity_welcome_msg">Go to widgets to find the timer for your home screen.\nHope you like it!</string>
    <integer name="default_timer_length">1200000</integer>
</resources>